Added base layout for skills section and svg background

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,14 @@
 body {
-  background: #212121;
+  background: hsl(0deg, 0%, 13%);
   color: white;
   font-family: "Nunito", sans-serif;
+  overflow-x: hidden;
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+  padding: 0;
 }
 
 .heroSvg {
@@ -46,7 +53,7 @@ body {
   font-size: 1em;
   letter-spacing: 1px;
   margin-top: 2.5em;
-  background: #05a2e1;
+  background: hsl(197deg, 96%, 45%);
   color: white;
   text-decoration: none;
   padding: 0.5em 1em;
@@ -63,6 +70,22 @@ body {
   position: absolute;
   left: 0;
   margin-top: 75px;
+}
+
+.spacer {
+  aspect-ratio: 1440/1136;
+  width: 100vw;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.layer1 {
+  background-image: url("../img/section-wave.svg");
+}
+
+.skills-container {
+  padding-top: 150px;
 }
 
 @media (min-width: 840px) {
@@ -94,6 +117,107 @@ body {
     width: 1200px;
   }
 }
+.skills {
+  width: 80%;
+  margin: 10em auto 5em auto;
+  padding-top: 85px;
+}
+
+.skills .skillsGrid {
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-areas: "box1 box1 box2 box2 box3 box3" ". box4 box4 box4 box4 .";
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+
+.skills .skillsGrid div {
+  text-align: center;
+  border: 1px solid #f4f7fa;
+  border-radius: 10px;
+  padding: 1rem;
+  color: #d3dfe8;
+  transition: all 0.5s ease;
+}
+
+.skills .skillsGrid div h3 {
+  color: #70acc9;
+}
+
+.skills .skillsGrid div i {
+  font-size: 4rem;
+  transition: all 0.5s ease;
+}
+
+.skills .skillsGrid div ul {
+  list-style: none;
+  text-transform: capitalize;
+}
+
+.skills .skillsGrid div li {
+  margin: 1rem 0;
+  font-size: 1.2rem;
+}
+
+.skills .skillsGrid div:first-of-type {
+  grid-area: box1;
+}
+
+.skills .skillsGrid div:first-of-type:hover {
+  border-color: #f27641;
+}
+
+.skills .skillsGrid div:first-of-type:hover > i {
+  color: #f27641;
+}
+
+.skills .skillsGrid div:nth-of-type(2) {
+  grid-area: box2;
+}
+
+.skills .skillsGrid div:nth-of-type(2):hover {
+  border-color: #6a85ec;
+}
+
+.skills .skillsGrid div:nth-of-type(2):hover > i {
+  color: #6a85ec;
+}
+
+.skills .skillsGrid div:nth-of-type(3) {
+  grid-area: box3;
+}
+
+.skills .skillsGrid div:nth-of-type(3):hover {
+  border-color: #f2e066;
+}
+
+.skills .skillsGrid div:nth-of-type(3):hover > i {
+  color: #f2e066;
+}
+
+.skills .skillsGrid div:last-of-type {
+  grid-area: box4;
+}
+
+.skills .skillsGrid div:last-of-type:hover {
+  border-color: #41B883;
+}
+
+.skills .skillsGrid div:last-of-type:hover > i {
+  color: #41B883;
+}
+
+body .headersStyle {
+  color: white;
+  font-family: "Nunito", sans-serif;
+  font-size: 4rem;
+  margin-bottom: 2rem;
+}
+
+body .headersStyle span {
+  font-size: 3rem;
+  color: #05a2e1;
+}
+
 @media screen and (min-width: 1220px) {
   .heroSvg {
     position: absolute;
@@ -114,6 +238,10 @@ body {
     top: -20%;
     overflow: hidden;
     width: 1900px;
+  }
+
+  .skills {
+    margin-top: 650px;
   }
 }
 
