--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,5 +1,5 @@
 body {
-    background: hsl(0,0%,13%);
+    background: hsl(0, 0%, 13%);
     color: white;
     font-family: 'Nunito', sans-serif;
     overflow-x: hidden;
@@ -57,7 +57,7 @@ body {
         font-size: 1em;
         letter-spacing: 1px;
         margin-top: 2.5em;
-        background: hsl(197,96%,45%);
+        background: hsl(197, 96%, 45%);
         color: white;
         text-decoration: none;
         padding: .5em 1em;
@@ -113,7 +113,7 @@ body {
         .quote-container {
             display: flex;
             place-content: unset;
-    
+
             p {
                 margin-top: 0;
             }
@@ -137,11 +137,12 @@ body {
     .skillsGrid {
         display: grid;
         grid-gap: 1rem;
-        // grid-template-areas: "box1 box1 box2 box2 box3 box3" ". box4 box4 box5 box5 ." ". . box6 box6 . .";
-        grid-template-areas: "box1 box1 box2 box2 box3 box3" "box4 box4 box4 box5 box5 box5" ". box7 box6 box6 box8 .";
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+        // grid-template-areas: "box1 box1 box2 box2 box3 box3" "box4 box4 box4 box5 box5 box5" ". box7 box6 box6 box8 .";
+        // grid-template-columns: repeat(6, 1fr);
+        grid-template-areas: "box1 box1 box1 box1 box2 box2 box2 box2 box3 box3 box3 box3" ". box5 box5 box5 box5 box5 box4 box4 box4 box4 box4 ." ". . box7 box7 box6 box6 box6 box6 box8 box8 . .";
+        grid-template-columns: repeat(12, 1fr);
     }
-    
+
     .skillsGrid div {
         text-align: center;
         border: 1px solid #f4f7fa;
@@ -154,97 +155,121 @@ body {
             cursor: default;
         }
     }
+
     .skillsGrid div h3 {
         color: #70acc9;
         font-size: 20px;
     }
+
     .skillsGrid div i {
         font-size: 4rem;
         transition: all 0.5s ease;
         margin-bottom: 8px;
     }
+
     .skillsGrid div ul {
         list-style: none;
         text-transform: capitalize;
     }
+
     .skillsGrid div li {
         margin: 1rem 0;
         font-size: 1.2rem;
     }
+
     .skillsGrid div:first-of-type {
         grid-area: box1;
     }
+
     .skillsGrid div:first-of-type:hover {
         border-color: #f27641;
     }
-    .skillsGrid div:first-of-type:hover > i {
+
+    .skillsGrid div:first-of-type:hover>i {
         color: #f27641;
     }
+
     .skillsGrid div:nth-of-type(2) {
         grid-area: box2;
     }
+
     .skillsGrid div:nth-of-type(2):hover {
         border-color: #6a85ec;
     }
-    .skillsGrid div:nth-of-type(2):hover > i {
+
+    .skillsGrid div:nth-of-type(2):hover>i {
         color: #6a85ec;
     }
+
     .skillsGrid div:nth-of-type(3) {
         grid-area: box3;
     }
+
     .skillsGrid div:nth-of-type(3):hover {
         border-color: #f2e066;
     }
-    .skillsGrid div:nth-of-type(3):hover > i {
+
+    .skillsGrid div:nth-of-type(3):hover>i {
         color: #f2e066;
     }
+
     .skillsGrid div:nth-of-type(4) {
         grid-area: box4;
     }
+
     .skillsGrid div:nth-of-type(4):hover {
         border-color: #41B883;
     }
-    .skillsGrid div:nth-of-type(4):hover > i {
+
+    .skillsGrid div:nth-of-type(4):hover>i {
         color: #41B883;
-    } 
+    }
 
     .skillsGrid div:nth-of-type(5) {
         grid-area: box5;
     }
+
     .skillsGrid div:nth-of-type(5):hover {
         border-color: #61DBFB;
     }
-    .skillsGrid div:nth-of-type(5):hover > i {
+
+    .skillsGrid div:nth-of-type(5):hover>i {
         color: #61DBFB;
     }
 
     .skillsGrid div:nth-of-type(6) {
         grid-area: box6;
     }
+
     .skillsGrid div:nth-of-type(6):hover {
         border-color: #3C873A;
     }
-    .skillsGrid div:nth-of-type(6):hover > i {
+
+    .skillsGrid div:nth-of-type(6):hover>i {
         color: #3C873A;
     }
 
     .skillsGrid div:nth-of-type(7) {
         grid-area: box7;
     }
+
     .skillsGrid div:nth-of-type(7):hover {
         border-color: #C1BEBC;
     }
-    .skillsGrid div:nth-of-type(7):hover > i {
+
+    .skillsGrid div:nth-of-type(7):hover>i {
         color: #C1BEBC;
     }
-    
+
     .skillsGrid div:nth-of-type(8) {
         grid-area: box8;
     }
+
     .skillsGrid div:nth-of-type(8):hover {
         border-color: #F1502F;
     }
-    .skillsGrid div:nth-of-type(8):hover > i {
+
+    .skillsGrid div:nth-of-type(8):hover>i {
         color: #F1502F;
     }
 }
@@ -256,11 +281,11 @@ body {
 }
 
 .headerStyle {
-color: white;
+    color: white;
 
     span {
         font-size: 4rem;
-        color: #05a2e1; 
+        color: #05a2e1;
     }
 }
 
@@ -268,13 +293,12 @@ color: white;
     color: #212121;
 
     span {
-    font-size: 4rem;
-    color: white; 
+        font-size: 4rem;
+        color: white;
     }
 }
 
 .projects {
-    // padding-top: 155px;
     width: 80%;
     margin: 5em auto 5em auto;
     padding-top: 125px;
@@ -283,33 +307,53 @@ color: white;
     .projectsGrid {
         display: grid;
         grid-gap: 1rem;
-        grid-template-areas: "box1 box1 box2 box2 box3 box3" ". box4 box4 box5 box5 ." ". . box6 box6 . .";
-        // grid-template-areas: "box1 box1 box2 box2 box3 box3" "box4 box4 box4 box5 box5 box5" ". box7 box6 box6 box8 .";
+        grid-template-areas: "box1 box1 box2 box2 box3 box3" "box4 box4 box5 box5 box6 box6" ;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
         margin-top: 40px;
     }
 
-    .projectsGrid div:nth-of-type(1) {
+    .projectsGrid > div:nth-of-type(1) {
         grid-area: box1;
     }
-    .projectsGrid div:nth-of-type(2) {
+
+    .projectsGrid > div:nth-of-type(2) {
         grid-area: box2;
     }
-    .projectsGrid div:nth-of-type(3) {
+
+    .projectsGrid > div:nth-of-type(3) {
         grid-area: box3;
     }
-    .projectsGrid div:nth-of-type(4) {
+
+    .projectsGrid > div:nth-of-type(4) {
         grid-area: box4;
     }
-    .projectsGrid div:nth-of-type(5) {
+
+    .projectsGrid > div:nth-of-type(5) {
         grid-area: box5;
     }
+    
+    .projectsGrid > div:nth-of-type(6) {
+        grid-area: box6;
+    }
 
-    div {
+    .projectsGrid > div {
         width: 500px;
         height: 300px;
         background-color: white;
         color: black;
+    }
+
+    .projectImage {
+        background-image: url("../img/test.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        min-height: 75%;
+    }
+
+    .projectInfo {
+        display: flex;
+        flex-flow: column nowrap;
+        margin-top: 1em;
     }
 }
 
@@ -336,7 +380,7 @@ color: white;
         overflow: hidden;
         width: 1900px;
     }
-    
+
     .skills {
         margin-top: 650px;
     }
