--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background: hsl(0deg, 0%, 13%);
   color: white;
@@ -6,9 +15,9 @@ body {
   box-sizing: border-box;
 }
 
-* {
-  margin: 0;
-  padding: 0;
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
 .heroSvg {
@@ -254,14 +263,19 @@ body {
   width: 80%;
   margin: 5em auto 5em auto;
   padding-top: 125px;
-  min-height: 900px;
+  min-height: 1050px;
+  font-family: "Kalam", cursive;
+  font-size: 20px;
 }
 .projects .projectsGrid {
   display: grid;
-  grid-gap: 1rem;
+  grid-gap: 2rem;
   grid-template-areas: "box1 box1 box2 box2 box3 box3" "box4 box4 box5 box5 box6 box6";
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   margin-top: 40px;
+}
+.projects .projectsGrid > div {
+  margin-top: 2rem;
 }
 .projects .projectsGrid > div:nth-of-type(1) {
   grid-area: box1;
@@ -282,21 +296,37 @@ body {
   grid-area: box6;
 }
 .projects .projectsGrid > div {
-  width: 500px;
   height: 300px;
-  background-color: white;
-  color: black;
+  margin-bottom: 70px;
 }
-.projects .projectImage {
+.projects .projectCard {
+  border-radius: 10px;
+  margin: 10px;
+}
+.projects .projectsCard-bg {
+  border-radius: 10px;
   background-image: url("../img/test.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: 75%;
+  min-height: 85%;
+  border: 2px solid white;
 }
-.projects .projectInfo {
-  display: flex;
-  flex-flow: column nowrap;
-  margin-top: 1em;
+.projects .projectsCard-links {
+  text-align: center;
+  margin-top: 12px;
+  color: white;
+  cursor: pointer;
+}
+.projects .projectsCard-links .projectsCard-links-btn {
+  width: 100%;
+  margin-top: 8px;
+  border: 2px solid white;
+  border-radius: 10px;
+  padding: 5px 0;
+  transition: background-color 0.7s ease;
+}
+.projects .projectsCard-links .projectsCard-links-btn:hover {
+  background-color: rgba(33, 33, 33, 0.9);
 }
 
 @media screen and (min-width: 1220px) {
