--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,3 +1,13 @@
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background: hsl(0, 0%, 13%);
     color: white;
@@ -6,9 +16,9 @@ body {
     box-sizing: border-box;
 }
 
-* {
-    margin: 0;
-    padding: 0;
+a {
+    text-decoration: none;
+    color: inherit;
 }
 
 .heroSvg {
@@ -302,14 +312,20 @@ body {
     width: 80%;
     margin: 5em auto 5em auto;
     padding-top: 125px;
-    min-height: 900px;
+    min-height: 1050px;
+    font-family: 'Kalam', cursive;
+    font-size: 20px;
 
     .projectsGrid {
         display: grid;
-        grid-gap: 1rem;
+        grid-gap: 2rem;
         grid-template-areas: "box1 box1 box2 box2 box3 box3" "box4 box4 box5 box5 box6 box6" ;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
         margin-top: 40px;
+    }
+
+    .projectsGrid > div {
+        margin-top: 2rem;
     }
 
     .projectsGrid > div:nth-of-type(1) {
@@ -337,24 +353,44 @@ body {
     }
 
     .projectsGrid > div {
-        width: 500px;
         height: 300px;
-        background-color: white;
-        color: black;
+        margin-bottom: 70px;
     }
 
-    .projectImage {
+    .projectCard {
+        border-radius: 10px;
+        margin: 10px;
+    }
+
+    .projectsCard-bg {
+        border-radius: 10px;
         background-image: url("../img/test.jpg");
         background-repeat: no-repeat;
         background-size: cover;
-        min-height: 75%;
+        min-height: 85%;
+        border: 2px solid white;
     }
 
-    .projectInfo {
-        display: flex;
-        flex-flow: column nowrap;
-        margin-top: 1em;
+    .projectsCard-links {
+        text-align: center;
+        margin-top: 12px;
+        color: white;
+        cursor: pointer;
+
+        .projectsCard-links-btn {
+            width: 100%;
+            margin-top: 8px;
+            border: 2px solid white;
+            border-radius: 10px;
+            padding: 5px 0;
+            transition: background-color .7s ease;
+
+            &:hover {
+                background-color: rgba(33, 33, 33, 0.9);
+            }
+        }
     }
+
 }
 
 @media screen and(min-width: 1220px) {
