--- a/css/styles.css
+++ b/css/styles.css
@@ -92,7 +92,7 @@ a {
 }
 
 .skills-container {
-  padding-top: 150px;
+  padding-top: 115px;
 }
 
 @media (min-width: 840px) {
@@ -240,7 +240,7 @@ a {
 .header {
   font-family: "Kalam", cursive;
   font-size: 4rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .headerStyle {
@@ -262,17 +262,16 @@ a {
 .projects {
   width: 80%;
   margin: 5em auto 5em auto;
-  padding-top: 125px;
-  min-height: 1050px;
+  padding-top: 185px;
   font-family: "Kalam", cursive;
   font-size: 20px;
+  padding-bottom: 200px;
 }
 .projects .projectsGrid {
   display: grid;
-  grid-gap: 2rem;
-  grid-template-areas: "box1 box1 box2 box2 box3 box3" "box4 box4 box5 box5 box6 box6";
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  margin-top: 40px;
+  grid-gap: 3rem;
+  grid-template-areas: "box1 box1 box2 box2 box3 box3" "box4 box4 box4 box5 box5 box5";
+  grid-auto-columns: 1fr;
 }
 .projects .projectsGrid > div {
   margin-top: 2rem;
@@ -308,7 +307,7 @@ a {
   background-image: url("../img/test.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: 85%;
+  height: 100%;
   border: 2px solid white;
 }
 .projects .projectsCard-links {
