--- a/css/styles.scss
+++ b/css/styles.scss
@@ -101,7 +101,7 @@ a {
 }
 
 .skills-container {
-    padding-top: 150px;
+    padding-top: 115px;
 }
 
 
@@ -287,7 +287,7 @@ a {
 .header {
     font-family: 'Kalam', cursive;
     font-size: 4rem;
-    margin-bottom: 1.5rem;
+    margin-bottom: .5rem;
 }
 
 .headerStyle {
@@ -311,17 +311,19 @@ a {
 .projects {
     width: 80%;
     margin: 5em auto 5em auto;
-    padding-top: 125px;
-    min-height: 1050px;
+    padding-top: 185px;
     font-family: 'Kalam', cursive;
     font-size: 20px;
+    padding-bottom: 200px;
 
     .projectsGrid {
         display: grid;
-        grid-gap: 2rem;
-        grid-template-areas: "box1 box1 box2 box2 box3 box3" "box4 box4 box5 box5 box6 box6" ;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-        margin-top: 40px;
+        grid-gap: 3rem;
+        grid-template-areas: 
+            "box1 box1 box2 box2 box3 box3" 
+            "box4 box4 box4 box5 box5 box5";
+        // grid-template-columns: repeat(6, 1fr);
+        grid-auto-columns: 1fr;
     }
 
     .projectsGrid > div {
@@ -367,14 +369,14 @@ a {
         background-image: url("../img/test.jpg");
         background-repeat: no-repeat;
         background-size: cover;
-        min-height: 85%;
+        height: 100%;
         border: 2px solid white;
     }
 
     .projectsCard-links {
         text-align: center;
         margin-top: 12px;
-        color: white;
+        color: white; 
         cursor: pointer;
 
         .projectsCard-links-btn {
@@ -390,7 +392,6 @@ a {
             }
         }
     }
-
 }
 
 @media screen and(min-width: 1220px) {
