--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ a {
   border-radius: 25px;
   font-weight: bold;
   border: 3px solid transparent;
-  transition: 0.5s ease border;
+  transition: 0.25s ease border;
 }
 .content .cta:hover {
   border: 3px solid white;
@@ -295,6 +295,7 @@ a {
   grid-area: box6;
 }
 .projects .projectsGrid > div {
+  position: relative;
   height: 300px;
   margin-bottom: 70px;
 }
@@ -304,11 +305,45 @@ a {
 }
 .projects .projectsCard-bg {
   border-radius: 10px;
-  background-image: url("../img/test.jpg");
+  background: url("../img/test.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   height: 100%;
   border: 2px solid white;
+  transition: all 0.3s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.projects .hiddenProjectInfo {
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  right: 2px;
+  height: 100%;
+  background: rgba(21, 21, 21, 0.6);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: opacity 0.25s ease;
+}
+.projects .hiddenProjectInfo > * {
+  transform: translateY(60px);
+  transition: transform 0.25s ease;
+}
+.projects .hiddenProjectInfo:hover {
+  opacity: 1;
+  cursor: default;
+}
+.projects .hiddenProjectInfo:hover > * {
+  transform: translateY(0);
+}
+.projects .blur {
+  backdrop-filter: blur(5px);
 }
 .projects .projectsCard-links {
   text-align: center;
@@ -322,10 +357,10 @@ a {
   border: 2px solid white;
   border-radius: 10px;
   padding: 5px 0;
-  transition: background-color 0.7s ease;
+  transition: background-color 0.25s ease;
 }
 .projects .projectsCard-links .projectsCard-links-btn:hover {
-  background-color: rgba(33, 33, 33, 0.9);
+  background-color: rgba(33, 33, 33, 0.6);
 }
 
 @media screen and (min-width: 1220px) {
