--- a/css/styles.scss
+++ b/css/styles.scss
@@ -74,7 +74,7 @@ a {
         border-radius: 25px;
         font-weight: bold;
         border: 3px solid transparent;
-        transition: .5s ease border;
+        transition: .25s ease border;
 
         &:hover {
             border: 3px solid white;
@@ -355,6 +355,7 @@ a {
     }
 
     .projectsGrid > div {
+        position: relative;
         height: 300px;
         margin-bottom: 70px;
     }
@@ -366,11 +367,50 @@ a {
 
     .projectsCard-bg {
         border-radius: 10px;
-        background-image: url("../img/test.jpg");
+        background: url("../img/test.jpg");
         background-repeat: no-repeat;
         background-size: cover;
         height: 100%;
         border: 2px solid white;
+        transition: all .3s ease;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+
+    .hiddenProjectInfo {
+        position: absolute;
+        top: 2px;
+        left: 2px;
+        right: 2px;
+        height: 100%;
+        background: rgba(21,21,21,0.6);
+        border-radius: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        opacity: 0;
+        transition: opacity .25s ease;
+
+        & > * {
+            transform: translateY(60px);
+            transition: transform 0.25s ease;
+        }
+
+        &:hover {
+            opacity: 1;
+            cursor: default;
+        }
+
+        &:hover > * {
+            transform: translateY(0);
+        }
+    }
+
+    .blur {
+        backdrop-filter: blur(5px);
     }
 
     .projectsCard-links {
@@ -385,10 +425,10 @@ a {
             border: 2px solid white;
             border-radius: 10px;
             padding: 5px 0;
-            transition: background-color .7s ease;
+            transition: background-color .25s ease;
 
             &:hover {
-                background-color: rgba(33, 33, 33, 0.9);
+                background-color: rgba(33, 33, 33, 0.6);
             }
         }
     }
