--- a/css/styles.css
+++ b/css/styles.css
@@ -240,7 +240,7 @@ a {
 .header {
   font-family: "Kalam", cursive;
   font-size: 4rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 2rem;
 }
 
 .headerStyle {
@@ -287,12 +287,11 @@ a {
 }
 .projects .projectsGrid > div:nth-of-type(4) {
   grid-area: box4;
+  height: 350px;
 }
 .projects .projectsGrid > div:nth-of-type(5) {
   grid-area: box5;
-}
-.projects .projectsGrid > div:nth-of-type(6) {
-  grid-area: box6;
+  height: 350px;
 }
 .projects .projectsGrid > div {
   position: relative;
@@ -314,7 +313,26 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  text-align: center;
+}
+.projects .projectsCard-bg__1 {
+  background: url("../img/pizza3.png");
+  background-size: cover;
+}
+.projects .projectsCard-bg__2 {
+  background: url("../img/journalApp.png");
+  background-size: cover;
+}
+.projects .projectsCard-bg__3 {
+  background: url("../img/dolla3.png");
+  background-size: cover;
+}
+.projects .projectsCard-bg__4 {
+  background: url("../img/champs.png");
+  background-size: cover;
+}
+.projects .projectsCard-bg__5 {
+  background: url("../img/memories.png");
+  background-size: cover;
 }
 .projects .hiddenProjectInfo {
   position: absolute;
@@ -330,6 +348,15 @@ a {
   justify-content: center;
   opacity: 0;
   transition: opacity 0.25s ease;
+  text-align: center;
+}
+.projects .hiddenProjectInfo > h3 {
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-bottom: 0.25em;
+}
+.projects .hiddenProjectInfo > p {
+  width: 90%;
 }
 .projects .hiddenProjectInfo > * {
   transform: translateY(60px);
