--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,28 @@ a {
   margin-top: 75px;
 }
 
+.header {
+  font-family: "Kalam", cursive;
+  font-size: 4rem;
+  margin-bottom: 2rem;
+}
+
+.headerStyle {
+  color: white;
+}
+.headerStyle span {
+  font-size: 4rem;
+  color: #05a2e1;
+}
+
+.headerStyleInverse {
+  color: #212121;
+}
+.headerStyleInverse span {
+  font-size: 4rem;
+  color: white;
+}
+
 .spacer {
   width: 100vw;
   background-repeat: no-repeat;
@@ -89,6 +111,10 @@ a {
 
 .layer1 {
   background-image: url("../img/section-wave.svg");
+}
+
+.layer2 {
+  background-image: url("../img/waveEnd.svg");
 }
 
 .skills-container {
@@ -142,7 +168,7 @@ a {
   border-radius: 10px;
   padding: 1rem;
   color: #d3dfe8;
-  transition: all 0.5s ease;
+  transition: all 0.3s ease;
 }
 .skills .skillsGrid div:hover {
   cursor: default;
@@ -222,7 +248,7 @@ a {
   grid-area: box7;
 }
 .skills .skillsGrid div:nth-of-type(7):hover {
-  border-color: #C1BEBC;
+  border-color: #dfac8a;
 }
 .skills .skillsGrid div:nth-of-type(7):hover > i {
   color: #C1BEBC;
@@ -237,35 +263,12 @@ a {
   color: #F1502F;
 }
 
-.header {
-  font-family: "Kalam", cursive;
-  font-size: 4rem;
-  margin-bottom: 2rem;
-}
-
-.headerStyle {
-  color: white;
-}
-.headerStyle span {
-  font-size: 4rem;
-  color: #05a2e1;
-}
-
-.headerStyleInverse {
-  color: #212121;
-}
-.headerStyleInverse span {
-  font-size: 4rem;
-  color: white;
-}
-
 .projects {
   width: 80%;
-  margin: 5em auto 5em auto;
+  margin: 5em auto 0em auto;
   padding-top: 185px;
   font-family: "Kalam", cursive;
   font-size: 20px;
-  padding-bottom: 200px;
 }
 .projects .projectsGrid {
   display: grid;
@@ -388,6 +391,42 @@ a {
 }
 .projects .projectsCard-links .projectsCard-links-btn:hover {
   background-color: rgba(33, 33, 33, 0.6);
+}
+
+.contactContent {
+  padding-top: 15em;
+  width: 80%;
+  margin: 0 auto;
+  font-family: "Kalam", cursive;
+}
+.contactContent .contact__socials {
+  text-align: center;
+  margin: auto;
+  font-size: 1.1rem;
+  color: #fff;
+  width: 80%;
+}
+.contactContent .contact__socials div {
+  margin: 1rem;
+}
+.contactContent .contact__socials div h3 {
+  color: #0590c7;
+  text-transform: capitalize;
+  font-size: 2.2rem;
+}
+.contactContent .contact__socials div:last-of-type {
+  display: flex;
+  flex-direction: column;
+}
+.contactContent .contact__socials i {
+  margin: 10px;
+  font-size: 1.8rem;
+  vertical-align: middle;
+  transition: all 0.25s ease;
+}
+.contactContent .contact__socials i:hover {
+  transform: translateY(-3px);
+  color: #0590c7;
 }
 
 @media screen and (min-width: 1220px) {
