--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,4 +1,6 @@
 
+$breakpoint2K: "2100px";
+
 * {
     margin: 0;
     padding: 0;
@@ -92,6 +94,11 @@ a {
     font-family: 'Kalam', cursive;
     font-size: 4rem;
     margin-bottom: 2rem;
+
+    @media(max-width: 800px) {
+        font-size: 3rem;
+        text-align: center;
+    };
 }
 
 .headerStyle {
@@ -100,6 +107,10 @@ a {
     span {
         font-size: 4rem;
         color: #05a2e1;
+
+        @media(max-width: 800px) {
+            font-size: 3rem;
+        };
     }
 }
 
@@ -109,6 +120,10 @@ a {
     span {
         font-size: 4rem;
         color: white;
+
+        @media(max-width: 800px) {
+            font-size: 3rem;
+        };
     }
 }
 
@@ -129,6 +144,10 @@ a {
 
 .skills-container {
     padding-top: 115px;
+
+    @media screen and (max-width: 800px) {
+        padding-top: 0;
+    }
 }
 
 
@@ -167,6 +186,7 @@ a {
 
 .skills {
     width: 80%;
+    max-width: 1700px;
     margin: 5em auto 5em auto;
     padding-top: 85px;
     font-size: 14px;
@@ -174,10 +194,47 @@ a {
     .skillsGrid {
         display: grid;
         grid-gap: 1rem;
-        // grid-template-areas: "box1 box1 box2 box2 box3 box3" "box4 box4 box4 box5 box5 box5" ". box7 box6 box6 box8 .";
-        // grid-template-columns: repeat(6, 1fr);
-        grid-template-areas: "box1 box1 box1 box1 box2 box2 box2 box2 box3 box3 box3 box3" ". box5 box5 box5 box5 box5 box4 box4 box4 box4 box4 ." ". . box7 box7 box6 box6 box6 box6 box8 box8 . .";
         grid-template-columns: repeat(12, 1fr);
+        grid-template-areas: 
+            "box1 box1 box1 box1 box2 box2 box2 box2 box3 box3 box3 box3" 
+            ". box5 box5 box5 box5 box5 box4 box4 box4 box4 box4 ." 
+            ". . box7 box7 box6 box6 box6 box6 box8 box8 . ."
+        ;
+        
+         @media screen and (max-width: 1725px) {
+             grid-template-areas: 
+                 "box1 box1 box1 box1 box2 box2 box2 box2 box3 box3 box3 box3" 
+                 "box5 box5 box5 box5 box5 box5 box4 box4 box4 box4 box4 box4" 
+                 "box7 box7 box7 box7 box6 box6 box6 box6 box8 box8 box8 box8"
+             ; 
+
+             font-size: .7rem;
+         }
+
+        @media screen and (max-width: 1170px) {
+            grid-template-columns: repeat(4, 1fr);
+            grid-template-areas: 
+                "box1 box1 box2 box2" 
+                "box3 box3 box4 box4" 
+                "box5 box5 box6 box6"
+                "box7 box7 box8 box8"
+            ; 
+
+        }
+
+        @media screen and (max-width: 800px) {
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-areas: 
+                "box1 box1 " 
+                "box2 box2 " 
+                "box3 box3 " 
+                "box4 box4 " 
+                "box5 box5 "
+                "box6 box6 "
+                "box7 box7 "
+                "box8 box8 "
+            ; 
+        }
     }
 
     .skillsGrid div {
@@ -212,6 +269,10 @@ a {
     .skillsGrid div li {
         margin: 1rem 0;
         font-size: 1.2rem;
+
+        @media screen and (max-width: 1170px) {
+            font-size: 1rem;
+        }
     }
 
     .skillsGrid div:first-of-type {
@@ -315,11 +376,16 @@ a {
 
 .projects {
     width: 80%;
+    max-width: 1600px;
     margin: 5em auto 0em auto;
     padding-top: 185px;
     font-family: 'Kalam', cursive;
     font-size: 20px;
     // padding-bottom: 200px;
+
+    @media screen and (max-width: 800px) {
+        padding-top: 75px;
+    }
 
     .projectsGrid {
         display: grid;
@@ -327,8 +393,27 @@ a {
         grid-template-areas: 
             "box1 box1 box2 box2 box3 box3" 
             "box4 box4 box4 box5 box5 box5";
-        // grid-template-columns: repeat(6, 1fr);
-        grid-auto-columns: 1fr;
+        grid-template-columns: repeat(6, 1fr);
+        
+        @media(max-width: 1600px) {
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-areas: 
+                "box1 box2"
+                "box3 box4"
+                "box5 box5"
+            ;
+        }
+
+        @media(max-width: 1250px) {
+            grid-template-columns: 1fr;
+            grid-template-areas: 
+                "box1"
+                "box2"
+                "box3"
+                "box4"
+                "box5"
+            ;
+        } 
     }
 
     .projectsGrid > div {
@@ -349,12 +434,18 @@ a {
 
     .projectsGrid > div:nth-of-type(4) {
         grid-area: box4;
-        height: 350px;
+        
+        @media(min-width: 1600px) {
+            height: 350px;
+        }
     }
 
     .projectsGrid > div:nth-of-type(5) {
         grid-area: box5;
-        height: 350px;
+
+        @media(min-width: 1250px) {
+            height: 350px;
+        }
     }
     
     // .projectsGrid > div:nth-of-type(6) {
@@ -452,7 +543,7 @@ a {
     }
 
     .blur {
-        backdrop-filter: blur(5px);
+        backdrop-filter: blur(5px); 
     }
 
     .projectsCard-links {
@@ -482,6 +573,14 @@ a {
     margin: 0 auto;
     font-family: 'Kalam', cursive;
 
+    @media(min-width: 2100px) {
+        padding-top: 18em;
+    };
+    
+    @media screen and (max-width: 1170px) {
+        padding-top: 12em;
+    }
+
     .contact__socials {
         text-align: center;
         margin: auto;
@@ -497,7 +596,15 @@ a {
       .contact__socials div h3 {
         color: #0590c7;
         text-transform: capitalize;
-        font-size: 2.2rem;
+        font-size: 2rem;
+
+        @media(max-width: 1170px) {
+            font-size: 1.8rem;
+        };
+
+        @media(max-width: 800px) {
+            font-size: 1.3rem;
+        };
       }
 
       .contact__socials div:last-of-type {
@@ -527,6 +634,15 @@ a {
         top: -20%;
         overflow: hidden;
         width: 1400px;
+
+        // position: absolute;
+        // z-index: 0;
+        // left: unset;
+        // right: 0;
+        // /* left: 0; */
+        // top: 0;
+        // overflow: hidden;
+        // max-width: 100%;
     }
 }
 
