Responsive minor fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,10 @@ a {
   color: inherit;
 }
 
+.mobileFix {
+  overflow-x: hidden;
+}
+
 .heroSvg {
   position: absolute;
   z-index: 0;
@@ -44,6 +48,7 @@ a {
   width: 100%;
   align-items: center;
   justify-content: center;
+  margin-top: 10px;
 }
 .content .quote-container .avatar {
   width: 25px;
@@ -90,6 +95,11 @@ a {
   .header {
     font-size: 3rem;
     text-align: center;
+  }
+}
+@media (min-width: 2100px) {
+  .header {
+    margin-bottom: 3rem;
   }
 }
 
@@ -310,7 +320,7 @@ a {
 
 .projects {
   width: 80%;
-  max-width: 1600px;
+  max-width: 1700px;
   margin: 5em auto 0em auto;
   padding-top: 185px;
   font-family: "Kalam", cursive;
@@ -319,6 +329,11 @@ a {
 @media screen and (max-width: 800px) {
   .projects {
     padding-top: 75px;
+  }
+}
+@media screen and (min-width: 2100px) {
+  .projects {
+    padding-top: 350px;
   }
 }
 .projects .projectsGrid {
@@ -467,12 +482,14 @@ a {
 .contactContent {
   padding-top: 15em;
   width: 80%;
+  max-width: 1700px;
   margin: 0 auto;
   font-family: "Kalam", cursive;
+  margin-bottom: 5em;
 }
 @media (min-width: 2100px) {
   .contactContent {
-    padding-top: 18em;
+    padding-top: 24em;
   }
 }
 @media screen and (max-width: 1170px) {
