--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@ a {
 .content .cta {
   display: inline-block;
   font-family: "Farsan", cursive;
-  font-size: 1em;
+  font-size: 1.4em;
   letter-spacing: 1px;
   margin-top: 2.5em;
   background: hsl(197deg, 96%, 45%);
@@ -72,6 +72,11 @@ a {
   font-weight: bold;
   border: 3px solid transparent;
   transition: 0.25s ease border;
+}
+@media screen and (min-width: 1100px) {
+  .content .cta {
+    font-size: 1.2rem;
+  }
 }
 .content .cta:hover {
   border: 3px solid white;
@@ -494,6 +499,11 @@ a {
     padding-top: 12em;
   }
 }
+@media screen and (max-width: 600px) {
+  .contactContent {
+    margin-bottom: 3em;
+  }
+}
 .contactContent .contact__socials {
   text-align: center;
   margin: auto;
@@ -559,6 +569,27 @@ a {
   .skills {
     margin-top: 650px;
   }
+}
+/* width */
+::-webkit-scrollbar {
+  width: 13px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+  box-shadow: inset 0 0 5px grey;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #1fbcf9;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #b30000;
 }
 
 /*# sourceMappingURL=styles.css.map */
