--- a/css/styles.scss
+++ b/css/styles.scss
@@ -68,7 +68,7 @@ a {
     .cta {
         display: inline-block;
         font-family: 'Farsan', cursive;
-        font-size: 1em;
+        font-size: 1.4em;
         letter-spacing: 1px;
         margin-top: 2.5em;
         background: hsl(197, 96%, 45%);
@@ -79,6 +79,10 @@ a {
         font-weight: bold;
         border: 3px solid transparent;
         transition: .25s ease border;
+
+        @media screen and (min-width: 1100px) {
+            font-size: 1.2rem;
+        }
 
         &:hover {
             border: 3px solid white;
@@ -594,6 +598,10 @@ a {
         padding-top: 12em;
     }
 
+    @media screen and (max-width: 600px) {
+        margin-bottom: 3em;
+    }
+
     .contact__socials {
         text-align: center;
         margin: auto;
@@ -675,3 +683,28 @@ a {
         margin-top: 650px;
     }
 }
+
+
+// Custom scrollbar for Google Chrome only
+
+/* width */
+::-webkit-scrollbar {
+    width: 13px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    border-radius: 10px;
+    box-shadow: inset 0 0 5px grey; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: lighten($color: #0590c7, $amount: 15); 
+    border-radius: 5px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #b30000; 
+  }
