--- a/css/styles.css
+++ b/css/styles.css
@@ -46,13 +46,16 @@ a {
   align-items: center;
   justify-content: center;
   margin-top: 10px;
+  margin-left: -6px;
 }
 .content .quote-container .avatar {
-  width: 25px;
-  height: 25px;
-  background: grey;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   place-content: center;
+  background-image: url("../img/logoMQ.png");
+  background-size: cover;
+  background-position: center;
 }
 .content .quote-container p {
   margin: 0 0.5em;
@@ -583,13 +586,13 @@ a {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #1fbcf9;
+  background-color: #1fbcf9;
   border-radius: 5px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #b30000;
+  background-color: #51cbfb;
 }
 
 /*# sourceMappingURL=styles.css.map */
