--- a/css/styles.scss
+++ b/css/styles.scss
@@ -50,13 +50,22 @@ a {
         align-items: center;
         justify-content: center;
         margin-top: 10px;
+        margin-left: -6px;
 
         .avatar {
-            width: 25px;
-            height: 25px;
-            background: grey;
+            // width: 25px;
+            // height: 25px;
+            // border-radius: 50%;
+            // place-content: center;
+            // background: grey;
+
+            width: 50px;
+            height: 50px;
             border-radius: 50%;
             place-content: center;
+            background-image: url("../img/logoMQ.png");
+            background-size: cover;
+            background-position: center;
         }
 
         p {
@@ -700,11 +709,11 @@ a {
    
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    background: lighten($color: #0590c7, $amount: 15); 
+    background-color: lighten($color: #0590c7, $amount: 15); 
     border-radius: 5px;
   }
   
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
-    background: #b30000; 
+    background-color: lighten($color: #0590c7, $amount: 25);; 
   }
