--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ a {
   font-family: "Farsan", cursive;
   font-size: 1.4em;
   letter-spacing: 1px;
-  margin-top: 2.5em;
+  margin-top: 1.5em;
   background: hsl(197deg, 96%, 45%);
   color: white;
   text-decoration: none;
@@ -479,6 +479,9 @@ a {
   border-radius: 10px;
   padding: 5px 0;
   transition: background-color 0.35s ease;
+}
+.projects .projectsCard-links .projectsCard-links-btn a {
+  display: block;
 }
 .projects .projectsCard-links .projectsCard-links-btn:hover {
   background-color: rgba(33, 33, 33, 0.8);
