--- a/css/styles.scss
+++ b/css/styles.scss
@@ -79,7 +79,7 @@ a {
         font-family: 'Farsan', cursive;
         font-size: 1.4em;
         letter-spacing: 1px;
-        margin-top: 2.5em;
+        margin-top: 1.5em;
         background: hsl(197, 96%, 45%);
         color: white;
         text-decoration: none;
@@ -583,6 +583,10 @@ a {
             border-radius: 10px;
             padding: 5px 0;
             transition: background-color .35s ease;
+
+            a {
+                display: block;
+            }
 
             &:hover {
                 background-color: rgba(33, 33, 33, 0.8);
